[gd_scene load_steps=4 format=3 uid="uid://d15dr447oxpgn"]

[ext_resource type="Script" uid="uid://dgq8i8ced82gl" path="res://main_window/side_panel/help/help.gd" id="1_1rhmu"]
[ext_resource type="Script" uid="uid://6f4n5n4dfbfm" path="res://custom/padded_scrollbar.gd" id="2_howdl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7b78"]

[node name="Help" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SmallSeparation"
script = ExtResource("1_1rhmu")

[node name="Heading" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Help"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Version" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/Version"]
layout_mode = 2
text = "Version:"

[node name="ID" type="LineEdit" parent="VBox/Version"]
layout_mode = 2
theme_type_variation = &"LineEdit_VersionNumber"
theme_override_colors/selection_color = Color(0.505882, 0.631373, 0.756863, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_t7b78")
text = "alpha"
editable = false
expand_to_text_length = true
drag_and_drop_selection_enabled = false
flat = true
select_all_on_focus = true

[node name="ReportIssue" type="RichTextLabel" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center][url]Report Issue[/url][/center]"
fit_content = true

[node name="Spacer" type="Control" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PaddedScrollbar" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_howdl")

[node name="Sections" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumSeparation"

[node name="Heading" type="Label" parent="ScrollContainer/PaddedScrollbar/Sections"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Keyboard Shortcuts"
horizontal_alignment = 1
uppercase = true

[node name="Section1" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "WHILE EDITING A TO-DO"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section1"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section1/Content"]
layout_mode = 2

[node name="Section2" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "CHANGE LIST VIEW SIZE"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section2"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section2/Content"]
layout_mode = 2

[node name="Section3" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "MOVE LIST VIEW"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section3"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section3/Content"]
layout_mode = 2

[node name="Section4" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "SEARCH TO-DOS"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section4"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section4/Content"]
layout_mode = 2

[node name="Section5" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "TOGGLE PANELS"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section5"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section5/Content"]
layout_mode = 2

[node name="Section6" type="FoldableContainer" parent="ScrollContainer/PaddedScrollbar/Sections"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
title = "CHANGE LOOK"

[node name="Content" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/Sections/Section6"]
layout_mode = 2
mouse_filter = 0
theme_type_variation = &"SmallSeparation"

[node name="Spacer" type="Control" parent="ScrollContainer/PaddedScrollbar/Sections/Section6/Content"]
layout_mode = 2
